 *
 *   You should have received a copy of the GNU General Public License
 *   along with this program; if not, write to the Free Software
 *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 */

I started this file to keep track of changes made in hybrid-6,
beginning with b37.  We are in VERY HIGH SPEED development mode,
so it's important to keep track of this. =)


============================================================================
|        Mon Jan 18 00:13:39 PST 1999	Jake Khuon <khuon@GCtr.Net>        |
============================================================================


[1] Added the following options:

	IDLE_IGNORE
		When used in conjunction with IDLE_CHECK will prevent the
	        server from idle'ing clients connected from the listed IP#s. 
	        This should probably be moved into a conf file entry at
	        some point in the future.
	
	SEND_FAKE_KILL_TO_CLIENT
		Make the client think it's being KILL'ed.  This was
		originally intended to prevent clients from reconnecting to
		the server after being dropped for idleness.  It can
		probably be used for other events too.  This really only
		works well if the client was compiled with
		QUIT_ON_OPERATOR_KILL which was mandatory policy on
		UMich.Edu hosts.

	LTRACE (Limited TRACE)
		Reports only link and oper traces even when O:line is
		active. Displays only Oper, Serv, Link, and Class reports
		even if the O-line is active.  Useful for just showing
		pertinent info of a specific server. Note however that if
		the target server is not running this option then you will
		still receive a normal trace output.  Defining this will
		remove "STATS p" funtionality since the two are basically
		redundant.

	LWALLOPS
		This is actually a compatibility command which really calls
		m_locops().

	STATS_NOTICE
		Notify opers on STATS request.  Some people find this
		invasive and with the STAT command on PACE throttle the
		server shouldn't suffer but lusers stat for different