@@ -375,7 +375,7 @@ H:*.au:*:*.au
 # NOTE:  As of hybrid-6, you MUST have at least one P: line defining a port
 # to listen on, or the server won't do much.
 #
-P::::6665
+P::::6667
 P::209.42.128.252::31337
 #
 # Listen on port 6665 on all available interfaces. Only allow connections from
