@@ -21,7 +21,7 @@
 #ifndef lint
 static	char sccsid[] = "@(#)ircd.c	2.48 3/9/94 (C) 1988 University of Oulu, \
 Computing Center and Jarkko Oikarinen";
-static char *rcs_version="$Id: ircd.c,v 1.27 1999/01/14 07:46:37 chuegen Exp $";
+static char *rcs_version="$Id: ircd.c,v 1.28 1999/01/19 02:23:11 khuon Exp $";
 #endif
 
 #include "struct.h"
@@ -425,11 +425,9 @@ static	time_t	check_pings(time_t currenttime)
   char *reason;				/* pointer to reason string */
   int die_index=0;			/* index into list */
   char ping_time_out_buffer[64];	/* blech that should be a define */
-#ifdef IDLE_CHECK
-#ifdef SEND_FAKE_KILL_TO_CLIENT
+#if defined(IDLE_CHECK) && defined(SEND_FAKE_KILL_TO_CLIENT)
   int		fakekill;
-#endif /* SEND_FAKE_KILL_TO_CLIENT */
-#endif /* IDLE_CHECK */
+#endif /* IDLE_CHECK && SEND_FAKE_KILL_TO_CLIENT */
 
 					/* of dying clients */
   dying_clients[0] = (aClient *)NULL;	/* mark first one empty */
@@ -489,7 +487,11 @@ static	time_t	check_pings(time_t currenttime)
 
 		      dying_clients[die_index] = cptr;
 #ifdef KLINE_WITH_REASON
-#ifdef WINTRHAWK
+		      reason = aconf->passwd ? aconf->passwd : "D-lined";
+#else
+
+/* Wintrhawk */
+#ifdef KLINE_WITH_CONNECTION_CLOSED
 		      /*
 		       * We use a generic non-descript message here on 
 		       * purpose so as to prevent other users seeing the
@@ -497,21 +499,10 @@ static	time_t	check_pings(time_t currenttime)
 		       */
 		      reason = "Connection closed";
 #else
-		      reason = aconf->passwd ? aconf->passwd : "D-lined";
-#endif /* WINTRHAWK */
+		      reason = "D-lined";
+#endif /* KLINE_WITH_CONNECTION_CLOSED */
+#endif /* KLINE_WITH_REASON */
 		      dying_clients_reason[die_index++] = reason;
-#else
-#ifdef WINTRHAWK
-		      /*
-		       * We use a generic non-descript message here on 
-		       * purpose so as to prevent other users seeing the
-		       * client disconnect from harassing the IRCops
-		       */
-		      dying_clients_reason[die_index++] = "Connection closed";
-#else
-		      dying_clients_reason[die_index++] = "D-lined";
-#endif /* WINTRHAWK */
-#endif
 		      dying_clients[die_index] = (aClient *)NULL;
 		      sendto_one(cptr, err_str(ERR_YOUREBANNEDCREEP),
 				 me.name, cptr->name, reason);
@@ -538,7 +529,10 @@ static	time_t	check_pings(time_t currenttime)
 
 		      dying_clients[die_index] = cptr;
 #ifdef KLINE_WITH_REASON
-#ifdef WINTRHAWK
+		      reason = aconf->passwd ? aconf->passwd : "G-lined";
+#else
+/* Wintrhawk */
+#ifdef KLINE_WITH_CONNECTION_CLOSED
 		      /*
 		       * We use a generic non-descript message here on 
 		       * purpose so as to prevent other users seeing the
@@ -546,21 +540,10 @@ static	time_t	check_pings(time_t currenttime)
 		       */
 		      reason = "Connection closed";
 #else
-		      reason = aconf->passwd ? aconf->passwd : "G-lined";
-#endif /* WINTRHAWK */
+		      reason = "G-lined";
+#endif /* KLINE_WITH_CONNECTION_CLOSED */
+#endif /* KLINE_WITH_REASON */
 		      dying_clients_reason[die_index++] = reason;
-#else
-#ifdef WINTRHAWK
-		      /*
-		       * We use a generic non-descript message here on 
-		       * purpose so as to prevent other users seeing the
-		       * client disconnect from harassing the IRCops
-		       */
-		      dying_clients_reason[die_index++] = "Connection closed";
-#else
-		      dying_clients_reason[die_index++] = "G-lined";
-#endif /* WINTRHAWK */
-#endif
 		      dying_clients[die_index] = (aClient *)NULL;
 		      sendto_one(cptr, err_str(ERR_YOUREBANNEDCREEP),
 				 me.name, cptr->name, reason);
@@ -583,7 +566,10 @@ static	time_t	check_pings(time_t currenttime)
 		      dying_clients[die_index] = cptr;
 
 #ifdef KLINE_WITH_REASON
-#ifdef WINTRHAWK
+		      reason = aconf->passwd ? aconf->passwd : "K-lined";
+#else
+/* Wintrhawk */
+#ifdef KLINE_WITH_CONNECTION_CLOSED
 		      /*
 		       * We use a generic non-descript message here on 
 		       * purpose so as to prevent other users seeing the
@@ -591,21 +577,10 @@ static	time_t	check_pings(time_t currenttime)
 		       */
 		      reason = "Connection closed";
 #else
-		      reason = aconf->passwd ? aconf->passwd : "K-lined";
-#endif /* WINTRHAWK */
+		      reason = "K-lined";
+#endif /* KLINE_WITH_CONNECTION_CLOSED */
+#endif /* KLINE_WITH_REASON */
 		      dying_clients_reason[die_index++] = reason;
-#else
-#ifdef WINTRHAWK
-		      /*
-		       * We use a generic non-descript message here on 
-		       * purpose so as to prevent other users seeing the
-		       * client disconnect from harassing the IRCops
-		       */
-		      dying_clients_reason[die_index++] = "Connection closed";
-#else
-		      dying_clients_reason[die_index++] = "K-lined";
-#endif /* WINTRHAWK */
-#endif
 		      dying_clients[die_index] = (aClient *)NULL;
 		      sendto_one(cptr, err_str(ERR_YOUREBANNEDCREEP),
 				 me.name, cptr->name, reason);
@@ -618,26 +593,21 @@ static	time_t	check_pings(time_t currenttime)
 #ifdef IDLE_CHECK
       if (IsPerson(cptr))
 	{
-	  if( !IsElined(cptr) && idle_time && 
+	  if( !IsElined(cptr) &&
+	      idle_time && 
 #ifdef OPER_IDLE
 	      !IsAnOper(cptr) &&
 #endif /* OPER_IDLE */
-#ifdef IDLE_IGNORE
-	      !matches(IDLE_IGNORE, inetntoa((char *)&cptr->ip)) &&
-#endif /* IDLE_IGNORE */
+	      !IsIdlelined(cptr) &&
 	      ((timeofday - cptr->user->last) > idle_time))
 	    {
 	      aConfItem *aconf;
 
 	      dying_clients[die_index] = cptr;
-#ifdef WINTRHAWK
 	      dying_clients_reason[die_index++] = "Idle time limit exceeded";
-#else
-	      dying_clients_reason[die_index++] = "idle exceeder";
-#endif /* WINTRHAWK */
-#ifdef SEND_FAKE_KILL_TO_CLIENT
+#if defined(SEND_FAKE_KILL_TO_CLIENT) && defined(IDLE_CHECK)
 	      fakekill = 1;
-#endif /* SEND_FAKE_KILL_TO_CLIENT */
+#endif /* SEND_FAKE_KILL_TO_CLIENT && IDLE_CHECK */
 	      dying_clients[die_index] = (aClient *)NULL;
 
 	      aconf = make_conf();
@@ -648,11 +618,7 @@ static	time_t	check_pings(time_t currenttime)
 	      aconf->port = 0;
 	      aconf->hold = timeofday + 60;
 	      add_temp_kline(aconf);
-#ifdef WINTRHAWK
 	      sendto_realops("Idle time limit exceeded for %s - temp k-lining",
-#else
-	      sendto_realops("Idle exceeder %s temp k-lining",
-#endif /* WINTRHAWK */
 			 get_client_name(cptr,FALSE));
 	      continue;		/* and go examine next fd/cptr */
 	    }
@@ -828,16 +794,16 @@ static	time_t	check_pings(time_t currenttime)
 	  (void)exit_client(cptr, cptr, &me, ping_time_out_buffer );
 	}
       else
-#ifdef SEND_FAKE_KILL_TO_CLIENT
+#if defined(SEND_FAKE_KILL_TO_CLIENT) && defined(IDLE_CHECK)
 	{
 	  if (fakekill)
 	    sendto_prefix_one(cptr, cptr, ":AutoKILL KILL %s :(%s)",
 	    cptr->name, dying_clients_reason[die_index]);
-#endif /* SEND_FAKE_KILL_TO_CLIENT */
 	  (void)exit_client(cptr, cptr, &me, dying_clients_reason[die_index]);
-#ifdef SEND_FAKE_KILL_TO_CLIENT
         }
-#endif /* SEND_FAKE_KILL_TO_CLIENT */
+#else 
+        (void)exit_client(cptr, cptr, &me, dying_clients_reason[die_index]);
+#endif /* SEND_FAKE_KILL_TO_CLIENT && IDLE_CHECK */
     }
 
   rehashed = 0;
